@@ -3442,19 +3442,18 @@ In Transient Mark mode, deactivate the mark."
     (w3m-url-at-point)))
 
 (defsubst w3m-canonicalize-url (url)
-  (when (stringp url)
-    ;; An URL must include a scheme part.
-    (unless (and (string-match w3m-url-components-regexp url)
-		 (match-beginning 1))
-      (setq url (concat (if (and (file-name-absolute-p url)
-				 (file-exists-p url))
-			    "file://"
-			  "http://")
-			url)))
-    ;; A server part must be ended with a slash.
-    (if (string-match "\\`\\(ht\\|f\\)tps?://[^/]+\\'" url)
-	(concat url "/")
-      url)))
+  ;; URL must include the scheme part.
+  (unless (and (string-match w3m-url-components-regexp url)
+	       (match-beginning 1))
+    (setq url (concat (if (and (file-name-absolute-p url)
+			       (file-exists-p url))
+			  "file://"
+			"http://")
+		      url)))
+  ;; The server part must be ended with a slash.
+  (if (string-match "\\`\\(ht\\|f\\)tps?://[^/]+\\'" url)
+      (concat url "/")
+    url))
 
 (defun w3m-input-url (&optional prompt initial default quick-start)
   "Read a url from the minibuffer, prompting with string PROMPT."
@@ -3483,11 +3482,14 @@ In Transient Mark mode, deactivate the mark."
 		   'w3m-input-url-history)))
       (when (string= "" url)
 	(setq url default))
-      ;; remove duplication
-      (when (stringp url)
-	(setq w3m-input-url-history
-	      (cons url (delete url w3m-input-url-history))))
-      (w3m-canonicalize-url url))))
+      (if (stringp url)
+	  (progn
+	    ;; remove duplication
+	    (setq w3m-input-url-history
+		  (cons url (delete url w3m-input-url-history)))
+	    (w3m-canonicalize-url url))
+	;; It may be `popup'.
+	url))))
 
 
 ;;; Cache:
